# TestTaskBPE

./: README.md  pyproject.toml
task1/: func.py  objects.py  util.py
task2/: main.py
task3/: const.py  main.py  utils.py
task4/: general.py  main.py  utils.py  worker.py
task4/data/: example.json  fixed_example.json
