[tool.poetry]
name = "test-task-bpe"
version = "0.0.1"
description = "Solved tasks for BPE"
authors = ["Sergei <kolesniksn2510@gmail.com>"]
readme = "README.md"
packages = [{include = "test_task_bpe"}]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.0"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
